[tool.poetry]
name = "xian-py"
version = "0.4.8"
description = "Python tools to interact with the Xian blockchain"
authors = ["endogen"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
PyNaCl = "^1.5.0"
aiohttp = "^3.9.0"
bip-utils = "^2.9.3"
astor = "^0.8.1"

[tool.poetry.group.eth]
optional = true

[tool.poetry.group.eth.dependencies]
eth-account = "^0.13.4"
eth-utils = "^5.2.0"

[tool.poetry.extras]
eth = ["eth-account", "eth-utils"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"